== (02/14/10)
* Added new field types: TimeSelect, DateSelect and DatetimeSelect (Tom Cocca)
  * Added configuration options to configure the stftime format for each field type for answer display
  * Field can require an answer or not

== (02/13/10)
* Moved the form field helper options logic out of the view and into the models to clean up the view (Tom Cocca)

== (02/07/10)
* Added ActiveRecord mixins for relationships between creator and submitter models (Tom Cocca)
  * creator:  is_form_create
  * submitter: is_form_submitter

== (02/04/10)
* Added an arrows image to make ordering a little cleaner and easier to understand (Tom Cocca)
* Removed route hack and added nice draw method (Tom Cocca)
  * Draw method taken from Thoughtbot's Clearance - thank you Thoughtbot for your great work

== (02/03/10)
* Added the ability to re-order form fields and form field options (Tom Cocca)
  * This is done using the scriptaculous Sortable Drag and Drop object
  * For form fields click on the Field Type label
  * From form field options grab the re-order text

== (02/02/10)
* Rewrote the forms/form_fields/form_field_options to use accepts_nested_attributes_for (Tom Cocca)
* Added a default prototype JS file and a helper method to include that file (Tom Cocca)
  * <%= javascript_include_tag :dynamic_forms_prototype %>
  * Start to make JS semi-unobtrusive for Adding/Removing the form_fields and form_field_options
* Added the base for being able to provide meta options per form field, no longer one huge text are for comma separated options (Tom Cocca)
* When a radio button select field is required make the first form_field_option selected by default if the form_submission value for that field is blank (Tom Cocca)

== (01/28/10)
* Added a confirmed? validation to ensure a checkbox was checked (Tom Cocca)
* Added a RadioButtonSelect field type (Tom Cocca)
  * Allows you to specify options for each radio button