@@ -1,3 +1,5 @@
+require 'twelve_hour_time_helper'
+
 require 'dynamic_forms/configuration'
 require 'dynamic_forms/routes'
 require 'dynamic_forms/dynamic_validations'
@@ -15,4 +17,5 @@ require 'dynamic_forms/models/field_types/text_field'
 require 'dynamic_forms/models/field_types/file_field'
 require 'dynamic_forms/models/field_types/radio_button_select'
 require 'dynamic_forms/models/field_types/time_select'
+
 require 'dynamic_forms/models/dynamic_forms_mailer'
